<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <Button
            android:id="@+id/stopBut"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF0000"
            android:text="@string/stop_but"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="160dp" android:layout_marginRight="160dp"
            app:layout_constraintStart_toEndOf="@+id/accelText" app:layout_constraintHorizontal_bias="0.977"
            app:layout_constraintTop_toBottomOf="@+id/forwardBut" android:layout_marginTop="8dp"/>
    <Button
            android:id="@+id/forwardBut"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#4CAF50"
            android:text="@string/forward_but"
            android:textColorLink="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/connectBut"
            android:layout_marginTop="28dp" app:layout_constraintHorizontal_bias="0.498"/>

    <SeekBar
            android:id="@+id/steeringBar"
            style="@style/Widget.AppCompat.SeekBar"
            android:layout_width="304dp"
            android:layout_height="25dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintTop_toBottomOf="@+id/steeringText" android:layout_marginTop="8dp"/>
    <FrameLayout
            android:layout_width="38dp"
            android:layout_height="250dp"
            app:layout_constraintTop_toBottomOf="@+id/accelText" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/steeringBar"
            app:layout_constraintHorizontal_bias="0.622" android:id="@+id/frameLayout" android:layout_marginTop="4dp">
        <SeekBar
                android:layout_width="250dp"
                android:layout_height="38dp"
                android:theme="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_gravity="center"
                android:rotation="270" android:id="@+id/accelBar"/>
    </FrameLayout>
    <TextView
            android:id="@+id/accelText"
            android:layout_width="59dp"
            android:layout_height="34dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/gear_header"
            android:gravity="center"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="348dp"/>
    <Button
            android:id="@+id/reverseBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:text="@string/reverse_mode_but"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/stopBut"/>
    <TextView
            android:id="@+id/steeringText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:text="@string/angle_header"
            android:textColor="#000000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/frameLayout" app:layout_constraintTop_toBottomOf="@+id/stopBut"
            android:layout_marginTop="144dp" app:layout_constraintHorizontal_bias="0.512"/>
    <Button
            android:id="@+id/connectBut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#2196F3"
            android:text="@string/connect"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="112dp" app:layout_constraintHorizontal_bias="0.497"/>
    <Button
            android:id="@+id/mapBut"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:background="@drawable/roundedbutton"
            android:text="@string/title_activity_maps"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>